syntax = "proto3";

package paymentpb;

option go_package = "github.com/vincentandr/shopping-microservice/src/payment/paymentpb";

service PaymentService {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
    rpc PaymentCheckout(CheckoutRequest) returns (CheckoutResponse) {}
    rpc MakePayment(PaymentRequest) returns (PaymentResponse) {}
}

message GetOrdersRequest {

}

message GetOrdersResponse {

}

message ItemResponse {
    string product_id = 1;
    string name = 2;
    float price = 3;
    int32 qty = 4;
}

message CheckoutRequest {
    string user_id = 1;
    repeated ItemResponse items = 2;
}

message CheckoutResponse {
    string order_id = 1;
}

message PaymentRequest {
    string order_id = 1;
}

message PaymentResponse {

}